# duplo-rs

./: .gitignore  Cargo.toml  License.txt  Readme.md
examples/: demo_similar_images.rs  demo_similar_videos.rs
src/: candidate.rs  files.rs  haar.rs  hamming.rs  hash.rs  lib.rs  marshal.rs  matches.rs  store.rs  tests.rs  videocandidate.rs  videomatches.rs  videostore.rs
