[package]
name = "duplo-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = "demo_similar_images"
path = "examples/demo_similar_images.rs"

[[example]]
name = "demo_similar_videos"
path = "examples/demo_similar_videos.rs"

[dependencies]
#array2d = "0.3.2"
base64 = "0.22.1"
image = "0.25.2"
imagesize = "0.13"
hamming_rs = "0.2.22"
rand = "0.8.5"
walkdir = "2.5.0"
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[dev-dependencies]
ctrlc = "3.4"
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
simplelog = { version = "0.12.2", features = ["paris"] }
clap = { version = "4.5.18", features = ["derive", "cargo"] }
pbr = "1.1.1"
